fixed wallpaper path

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -4,11 +4,11 @@ source=~/.config/hypr/keybindings.conf
 # toolkit-specific scale
 # env = GDK_SCALE,2
 # env = XCURSOR_SIZE,32
-env = LIBVA_DRIVER_NAME,nvidia
-env = XDG_SESSION_TYPE,wayland
-env = GBM_BACKEND,nvidia-drm
-env = __GLX_VENDOR_LIBRARY_NAME,nvidia
-env = WLR_NO_HARDWARE_CURSORS,1
+#env = LIBVA_DRIVER_NAME,nvidia
+#env = XDG_SESSION_TYPE,wayland
+#env = GBM_BACKEND,nvidia-drm
+#env = __GLX_VENDOR_LIBRARY_NAME,nvidia
+#env = WLR_NO_HARDWARE_CURSORS,1
 
 # Execute these commands on load-time
 # exec-once=xprop -root -f _XWAYLAND_GLOBAL_OUTPUT_SCALE 32c -set _XWAYLAND_GLOBAL_OUTPUT_SCALE 2
