changed workspace animation & duration

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -85,7 +85,7 @@ animations {
   animation = border, 1, 1, default
   animation = fade, 1, 5, smoothIn
   animation = fadeDim, 1, 1, smoothIn
-  animation = workspaces, 1, 5, overshot_workspace
+  animation = workspaces, 1, 2, smoothIn
 }
 
 # Layouts
