--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -21,7 +21,10 @@ exec = ~/.config/eww/scripts/init # Launch Eww bar
 exec-once = kitty
 
 # Monitor specifications
-monitor=DP-3, 1920x1080@60hz,0x0,1
+# monitor=Unknown-1, 1920x1080@60hz,1920x0,1,transform,3
+# monitor=Unknown-1, 1920x1080@60hz,1920x0,1,transform,3
+monitor=DP-2, 1920x1080@60hz,0x0,1
+monitor=DP-3, 1920x1080@60hz,1920x0,1,transform,3
 
 # Input configs
 input {
@@ -44,17 +47,17 @@ general {
 decoration {
   # Round corners
   rounding = 10
-  multisample_edges = true
+  # multisample_edges = true
 
   # Opacity
   active_opacity = 1
   inactive_opacity = 0.9
 
   # Blur
-  blur = true
-  blur_size = 5
-  blur_passes = 1
-  blur_new_optimizations = on
+  # blur = true
+  # blur_size = 5
+  # blur_passes = 1
+  # blur_new_optimizations = on
 
 
   # Shadow
